# Nola

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AI_INSTRUCTIONS.md  Makefile  README.md  pyproject.toml
core/: README.md  pyproject.toml
core/nola/: __init__.py  main.py
core/nola/api/: deps.py  files.py  transcriptions.py
core/nola/config/: __init__.py  constants.py  settings.py
core/nola/core/: __init__.py  config.py  constants.py
core/nola/engines/: __init__.py  base.py  faster_whisper.py
core/nola/models/: __init__.py  database.py  files.py  tasks.py
core/nola/models/utils/: __init__.py  db.py
core/nola/services/: __init__.py  worker.py
core/nola/utils/: __init__.py  mime.py
core/tests/: __init__.py  conftest.py  test_api.py  test_engines.py  test_models.py
