[project]
name = "nola-core"
version = "0.1.0"
description = "Speech-to-text engine powered by Faster Whisper"
authors = [
    {name = "Nola Team"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry]
packages = [{include = "nola"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
faster-whisper = "^1.2.1"
pydantic-settings = "^2.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

