[project]
name = "nola-core"
version = "0.1.0"
description = "Speech-to-text engine powered by Faster Whisper"
authors = [
    {name = "Nola Team"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry]
packages = [{include = "nola"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
faster-whisper = "^1.2.1"
pydantic-settings = "^2.12.0"
nvidia-cublas-cu12 = "^12.9.1.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.11,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["faster_whisper", "faster_whisper.*"]
ignore_missing_imports = true


